Made chat more readable. Fixes #28.

--- a/app/client/app.css
+++ b/app/client/app.css
@@ -720,7 +720,7 @@ footer .fa {
     margin: 1em auto 10px auto;
     text-align: left;
     font-size: 18px;
-    color: white;
+    color: #1C39B2;
     -webkit-transition-duration: 0.25s;
     transition-duration: 0.25s;
     font-weight: 300;
